--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/jkymarsh/html-email-workflow/issues"
   },
-  "homepage": "https://github.com/jkymarsh/html-email-workflow"
+  "homepage": "https://github.com/jkymarsh/html-email-workflow",
+  "dependencies": {},
+  "devDependencies": {
+    "gulp-extname": "^0.2.0"
+  }
 }
