--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "url": "https://github.com/jkymarsh/html-email-workflow/issues"
   },
   "homepage": "https://github.com/jkymarsh/html-email-workflow",
-  "dependencies": {},
-  "devDependencies": {
-    "gulp-extname": "^0.2.0"
-  }
+  "dependencies": {
+    "assemble": "^0.4.42"
+  },
+  "devDependencies": {}
 }
