--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/jkymarsh/html-email-workflow",
   "dependencies": {
-    "assemble": "^0.4.42"
+    "assemble": "^0.4.42",
+    "grunt": "^0.4.5"
   },
   "devDependencies": {}
 }
