--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/jkymarsh/html-email-workflow",
   "dependencies": {
-    "assemble": "^0.4.42",
-    "grunt": "^0.4.5"
+    "assemble": "^0.4.42"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^1.1.1"
+  }
 }
