--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-juice-email": "^0.1.3",
     "grunt-newer": "^1.1.1"
   }
 }
